horizontal scrollbar fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,6 +159,9 @@ h4 {
   }
   
 
+.row {
+    margin-right: auto;
+}
 .col-sm-12 {
     padding: 0;
 }
